Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-2925

MSSQL-based message store throws uncaught exception if db recovery throws an error

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.6
    • 0.7
    • C++ Broker
    • None
    • Windows

    Description

      If the MS SQL-based persistence store tries to recover a sql catalog and gets an error, the resultant com error isn't caught and ends up aborting the process without any diagnostic output to say why.

      Attachments

        Activity

          People

            shuston Stephen D. Huston
            shuston Stephen D. Huston
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: