Catch com exceptions during db recovery and rethrow as ADOExceptions which the broker can deal with. Resolves QPID-2925.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1030752 13f79535-47bb-0310-9956-ffa450edef68